# Otus-homework

./: .travis.yml  CMakeLists.txt
homework1_1/: .travis.yml  CMakeLists.txt  main.cpp
homework1_2/: CMakeLists.txt  main.cpp
homework2_1/: CMakeLists.txt  custom_allocator.cpp  custom_list.cpp  main.cpp
homework3_1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  ip_printer.cpp  main.cpp  print_ip
homework3_1/_CPack_Packages/Linux/DEB/: print_ip-0.0.105-Linux.deb  print_ip-0.0.106-Linux.deb
homework3_1/_CPack_Packages/Linux/DEB/print_ip-0.0.105-Linux/: control
homework3_1/_CPack_Packages/Linux/DEB/print_ip-0.0.106-Linux/: control
homework4_1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  bulk  bulk-0.0.115-Linux.deb  bulk-0.0.116-Linux.deb  bulk-0.0.118-Linux.deb  bulk-0.0.122-Linux.deb  bulk-0.0.123-Linux.deb  cmake_install.cmake  editor_controller.cpp  editor_controller.h  editor_image.cpp  editor_image.h  editor_model.cpp  editor_model.h  editor_view.cpp  editor_view.h  main.cpp
homework4_1/_CPack_Packages/Linux/DEB/: bulk-0.0.114-Linux.deb  bulk-0.0.117-Linux.deb  bulk-0.0.119-Linux.deb  bulk-0.0.120-Linux.deb  bulk-0.0.121-Linux.deb
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.114-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.115-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.116-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.117-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.118-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.119-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.120-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.121-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.122-Linux/: control
homework4_1/_CPack_Packages/Linux/DEB/bulk-0.0.123-Linux/: control
homework6_1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  bulk  cmake_install.cmake  main.cpp
homework6_1/_CPack_Packages/Linux/DEB/: bulk-0.0.111-Linux.deb
homework6_1/_CPack_Packages/Linux/DEB/bulk-0.0.111-Linux/: control
homework7_1/: CMakeLists.txt  filescomparator.cpp  filescomparator.h  main.cpp  scannedfile.cpp  scannedfile.h
homework8_1/: CMakeLists.txt  bulkcommandprinter.cpp  bulkcommandprinter.h  main.cpp
homework_10_1/: CMakeLists.txt  main.cpp  table.cpp  table.h  tableserver.cpp  tableserver.h  tablesession.cpp  tablesession.h
homework_8_2/: CMakeLists.txt  libasync.cpp  libasync.h  main.cpp  otus_82_global.h
homework_9_1/: CMakeLists.txt  commandsession.cpp  commandsession.h  commandsoutput.cpp  commandsoutput.h  commandsserver.cpp  commandsserver.h  main.cpp
